Fix align of the price

--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -40,6 +40,8 @@ article h2 {
     height: 60px;
     font-size: 30px;
     display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .information {
